# tinygfx

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.adoc
cmake/: PreventInTreeBuilds.cmake  Util.cmake
include/: gl_inc.h
include/core/: image.hpp  scenegraph.hpp
include/opengl/: glshader.hpp
include/util/: debug.hpp
include/vulkan/: vkshader.hpp
include/window/: window.hpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  scenegraph.cpp
src/opengl/: CMakeLists.txt
src/util/: CMakeLists.txt
src/vulkan/: CMakeLists.txt
src/window/: CMakeLists.txt  window.cpp
